versions/26.1.2/translated/ru_ru/develop/sounds/custom.md
---
title: Создание своих звуков
description: Вы научите добавлять и использовать новые звуки с реестром.
authors:
  - JR1811
resources:
  https://www.audacityteam.org/: Скачать Audacity
---

## Создание своих звуков {#creating-custom-sounds}

Нужно отформатировать ваш аудиофайл определённым образом. OGG Vorbis - это открытый формат для мультимедийных данных, например аудио, и используется в качестве звуковых файлов Minecraft. Чтобы избежать проблем с тем, как Minecraft обрабатывает дистанцию, вашему аудио нужно иметь только один канал (Mono).

Многие современные программы ЦЗРС (Цифровая звуковая рабочая станция) могут импортировать и экспортировать файлы этого формата. В следующем примере для приведения файла в правильный формат будет использован "[Audacity](https://www.audacityteam.org/)", или любая другая ЦЗРС программа.

![Неподготовленный файл в Audacity](/assets/develop/sounds/custom_sounds_0.png)

В этом примере звук [свисток](https://freesound.org/people/strongbot/sounds/568995/) был импортирован в Audacity. Обычно он сохраняется как файл `.wav` и имеет два аудио канала (Stereo). Отредактируйте звук по своему вкусу и удалите один из каналов, используя раскрывающийся элемент наверху "track head".

![Разделение Стерео трека](/assets/develop/sounds/custom_sounds_1.png)

![Удаление одного из каналов](/assets/develop/sounds/custom_sounds_2.png)

Когда вы экспортируете или рендерите аудиофайл, выберите формат файла OGG. Некоторые ЦЗРС, например REAPER, могут поддерживать несколько форматов слоёв OGG. В этом случае OGG Vorbis должен работать нормально.

![Экспорт как OGG файл](/assets/develop/sounds/custom_sounds_3.png)

Также имейте в виду, что аудиофайлы могут значительно увеличить размер вашего мода. При необходимости сожмите звук, когда редактируйте и экспортируйте файл, чтобы свести размер файла к минимуму.

## Загрузка аудиофайла {#loading-the-audio-file}

Добавьте новый каталог `resources/assets/example-mod/sounds` для звуков в вашем моде и поместите туда экспортированный аудиофайл `metal_whistle.ogg`.

Продолжите создание файла `resources/assets/example-mod/sounds.json`, если он еще не существует, и добавьте свой звук в записи звуков.

<<< @/reference/26.1.2/src/main/resources/assets/example-mod/sounds.json

Запись подписи предоставляет больше контекста для игрока. Название субтитров используется в языковых файлах в каталоге `resources/assets/example-mod/lang` и будет отображаться, если в игре включена настройка субтитров и воспроизводится этот пользовательский звук.

## Регистрация своего звука {#registering-the-custom-sound}

Чтобы добавить пользовательский звук в мод, зарегистрируйте SoundEvent в [инициализаторе мода](../getting-started/project-structure#entrypoints).

```java
Registry.register(BuiltInRegistries.SOUND_EVENT, Identifier.fromNamespaceAndPath(MOD_ID, "metal_whistle"),
        SoundEvent.createVariableRangeEvent(Identifier.fromNamespaceAndPath(MOD_ID, "metal_whistle")));
```

## Чистка беспорядка {#cleaning-up-the-mess}

В зависимости насколько много записей реестра находится, это может превратиться в беспорядок. Чтобы обойти это, мы должны сделать использование нового класса помощника.

Добавьте два новых метода для ранее созданного класса помощника. Первый регистрирует все звуки и используется для инициализации этого класса на первом месте. После этого вы можете добавить в новый статический класс `SoundEvent` нужные переменные.

<<< @/reference/26.1.2/src/main/java/com/example/docs/sound/CustomSounds.java#custom_sounds

Таким образом, инициализатору мода достаточно реализовать только одну строку для регистрации всех пользовательских SoundEvents.

<<< @/reference/26.1.2/src/main/java/com/example/docs/sound/ExampleModSounds.java#example_mod_sounds

## Используйте собственные SoundEvent'ы {#using-the-custom-soundevent}

Используйте класс помощник для доступа к собственному SoundEvent. Ознакомьтесь со страницей [Воспроизведение звуков](./using-sounds), чтобы узнать, как воспроизводить звуки.
